# neroued_vectorizer

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  UI-REFACTOR-PLAN.md  docker-compose.yml  gradio_app.py  pyproject.toml
.cursor/rules/: code-structure.mdc  cpp-formatting.mdc  cross-platform-cpp.mdc  eval-usage.mdc  git-policy.mdc  post-algo-eval.mdc  sync-docs.mdc
.github/workflows/: ci.yml  wheels.yml
apps/: CMakeLists.txt  evaluate_svg.cpp  raster_to_svg.cpp
ci/: install-deps-linux.sh  install-deps-macos.sh  install-deps-windows.bat  potrace-CMakeLists.txt
docs/research/: 00-executive-summary.md  01-current-architecture-analysis.md  04-implementation-plan.md  05-risk-assessment.md  README.md
docs/research/02-literature/: README.md  adobe-patents.md  color-quantization-survey.md  depixelizing-pixel-art.md  kurbo-bezier-simplify.md  live-vectorization.md  livss-vectorization.md  perception-driven-vectorization.md  potrace-and-color-trace.md  printing-trapping.md  vectorization-with-depth.md  vtracer-analysis.md
docs/research/03-algorithm-deep-dive/: color-quantization.md  depth-ordering.md  path-optimization.md  shape-extension.md  stacking-vs-cutout.md
eval/: CMakeLists.txt
eval/include/neroued/vectorizer/: eval.h
eval/src/: benchmark.cpp  benchmark.h  edge_metrics.cpp  edge_metrics.h  path_metrics.cpp  path_metrics.h  pixel_metrics.cpp  pixel_metrics.h  svg_geometry.cpp  svg_geometry.h  svg_rasterizer.cpp  svg_rasterizer.h  vectorize_eval.cpp
eval/tests/: test_vectorize_eval.cpp
include/neroued/vectorizer/: color.h  config.h  error.h  logging.h  result.h  vec2.h  vec3.h  vectorizer.h
python/: bindings.cpp
python/neroued_vectorizer/: __init__.py  _core.pyi
python/tests/: test_vectorize.py
src/: logging.cpp  pipeline.cpp  pipeline.h  pipeline_v2.cpp  vectorizer.cpp
src/boundary/: aa_detector.cpp  aa_detector.h  boundary_graph.cpp  boundary_graph.h  subpixel_refine.cpp  subpixel_refine.h
src/contour/: assembly.cpp  assembly.h  thin_line.cpp  thin_line.h
src/curve/: bezier.cpp  bezier.h  fitting.cpp  fitting.h  path_optimize.cpp  path_optimize.h
src/detail/: cv_utils.h  icc_utils.cpp  icc_utils.h  vectorized_shape.h
src/output/: shape_merge.cpp  shape_merge.h  svg_writer.cpp  svg_writer.h
src/preprocess/: preprocess.cpp  preprocess.h
src/quantize/: color_quantize.cpp  color_quantize.h  oklab.h
src/segment/: color_segment.cpp  color_segment.h  morphology.cpp  morphology.h  slic.cpp  slic.h
src/stacking/: depth_order.cpp  depth_order.h  shape_extend.cpp  shape_extend.h
src/trace/: coverage.cpp  coverage.h  potrace.cpp  potrace.h  topology.cpp  topology.h
test_data/baselines/current/: bcba38.json  c_193ce.json  c_5bf9c.json  c_7eda8.json  c_8e8d9.json  miku.json  reward.json  s_0ce86.json  s_39e69.json  s_64c9a.json  s_b8489.json  s_c0315.json  tjls.json  varesa.json
test_data/images/: manifest.json
tests/: CMakeLists.txt  test_vectorizer.cpp  test_vectorizer_potrace.cpp
web_ui/: Dockerfile  README.md  gradio_app.py  requirements.txt
