[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13", "setuptools-scm>=8"]
build-backend = "scikit_build_core.build"

# ── Project metadata ─────────────────────────────────────────────────────────

[project]
name = "neroued-vectorizer"
dynamic = ["version"]
description = "High-quality raster-to-SVG vectorization"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [{ name = "neroued" }]
keywords = ["vectorization", "svg", "image-processing", "raster-to-vector"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = ["numpy>=1.21"]

[project.urls]
Homepage = "https://github.com/neroued/neroued_vectorizer"
Repository = "https://github.com/neroued/neroued_vectorizer"
Issues = "https://github.com/neroued/neroued_vectorizer/issues"

# ── scikit-build-core ─────────────────────────────────────────────────────────

[tool.scikit-build]
cmake.args = [
    "-DNV_BUILD_PYTHON=ON",
    "-DNV_BUILD_APPS=OFF",
    "-DNV_BUILD_TESTS=OFF",
    "-DNV_BUILD_EVAL=OFF",
]
cmake.build-type = "Release"
wheel.packages = ["python/neroued_vectorizer"]
wheel.exclude = ["include/**", "lib/**"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

# ── cibuildwheel ──────────────────────────────────────────────────────────────

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-win32 *-manylinux_i686 *-musllinux*"
test-requires = ["pytest", "numpy"]
test-command = "pytest {project}/python/tests -v"
environment-pass = ["SETUPTOOLS_SCM_PRETEND_VERSION"]

[tool.cibuildwheel.linux]
before-all = "bash {project}/ci/install-deps-linux.sh"
manylinux-x86_64-image = "manylinux_2_28"
repair-wheel-command = "LD_LIBRARY_PATH=/usr/local/lib:/usr/local/lib64 auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
before-all = "bash {project}/ci/install-deps-macos.sh"
environment = { MACOSX_DEPLOYMENT_TARGET = "14.0" }
test-skip = "*-macosx_x86_64"

[tool.cibuildwheel.windows]
before-all = "ci\\install-deps-windows.bat"
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair --add-path C:/vcpkg/installed/x64-windows-release/bin -w {dest_dir} {wheel}"
environment = { CMAKE_TOOLCHAIN_FILE = "C:/vcpkg/scripts/buildsystems/vcpkg.cmake", SKBUILD_CMAKE_DEFINE = "VCPKG_TARGET_TRIPLET=x64-windows-release;POTRACE_ROOT=C:/potrace" }
